# ryframe

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  deploy.sh  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
crates/ryframe/: Cargo.toml
crates/ryframe-api/: Cargo.toml  build.rs
crates/ryframe-api/src/: handler_utils.rs  lib.rs  macros.rs  openapi.rs  oper_log_middleware.rs  permission_catalog.rs  probes.rs  router.rs  runtime.rs  state.rs  user_context_middleware.rs  versioning.rs
crates/ryframe-api/src/dto/: auth_dto.rs  config_dto.rs  dept_dto.rs  dict_dto.rs  generator_dto.rs  job_dto.rs  login_log_dto.rs  menu_dto.rs  mod.rs  multipart_dto.rs  notice_dto.rs  online_user_dto.rs  oper_log_dto.rs  password_validation.rs  permission_dto.rs  post_dto.rs  profile_dto.rs  role_dto.rs  tenant_dto.rs  tenant_validation.rs  user_dto.rs  user_import_dto.rs
crates/ryframe-api/src/extractors/: current_user.rs  mod.rs  page_query.rs
crates/ryframe-api/src/handlers/: auth_handler.rs  captcha_handler.rs  common_handler.rs  config_handler.rs  dept_handler.rs  dict_handler.rs  generator_handler.rs  job_handler.rs  login_log_handler.rs  menu_handler.rs  mod.rs  notice_handler.rs  online_user_handler.rs  (+7 more)
crates/ryframe-api/tests/: integration_test.rs  permission_test.rs  versioning_test.rs
crates/ryframe-auth/: Cargo.toml
crates/ryframe-auth/benches/: auth_bench.rs
crates/ryframe-auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  permission.rs  permission_code.rs  principal.rs  rbac.rs  route_registry.rs
crates/ryframe-auth/tests/: jwt_test.rs  password_test.rs  permission_test.rs  rbac_test.rs
crates/ryframe-common/: Cargo.toml
crates/ryframe-common/src/: actor_context.rs  constants.rs  error.rs  i18n.rs  lib.rs  result.rs  sql_log_flag.rs
crates/ryframe-common/tests/: captcha_test.rs  common_test.rs  constants_test.rs  crypto_test.rs  data_diff_test.rs  data_scope_test.rs  email_test.rs  excel_test.rs  file_upload_test.rs  i18n_test.rs  ip_test.rs  object_storage_test.rs  snowflake_test.rs  string_test.rs  tree_test.rs
crates/ryframe-config/: Cargo.toml
crates/ryframe-config/src/: app_config.rs  auth_config.rs  config_crypto.rs  cors_config.rs  db_config.rs  generator_config.rs  lib.rs  logger_config.rs  object_storage_config.rs  rate_limit_config.rs  redis_config.rs  runtime_config.rs
crates/ryframe-config/tests/: config_test.rs
crates/ryframe-core/: Cargo.toml
crates/ryframe-core/benches/: core_bench.rs
crates/ryframe-core/src/: auto_fill.rs  cache.rs  config_watcher.rs  context.rs  database_monitor.rs  datasource.rs  distributed_lock.rs  event_bus.rs  feature_flag.rs  grpc.rs  lib.rs  message_queue.rs  multi_tenant.rs  redis_client.rs  refresh_session.rs  repository.rs  resilience.rs  service.rs  task_queue.rs  token_blacklist.rs
crates/ryframe-core/tests/: config_watcher_test.rs  context_test.rs  datasource_test.rs  distributed_lock_test.rs  event_bus_test.rs  feature_flag_test.rs  grpc_test.rs  refresh_session_redis_test.rs  repository_test.rs  resilience_test.rs  task_queue_test.rs  token_blacklist_test.rs
crates/ryframe-db/: Cargo.toml
crates/ryframe-db-migration/: Cargo.toml
crates/ryframe-db-migration/src/: lib.rs  m20260522_000000_mysql_baseline.rs  m20260625_000001_tenant_completion.rs  m20260701_000002_menu_permission_binding.rs  m20260701_000003_user_auth_version.rs  m20260705_000004_relation_foreign_keys.rs  m20260714_000005_super_role_permissions.rs  m20260723_000006_file_upload_reservations.rs  schema.rs  seeder.rs
crates/ryframe-db-migration/tests/: mysql_migration_test.rs
crates/ryframe-db/benches/: db_bench.rs
crates/ryframe-db/src/: cluster.rs  connection.rs  data_scope.rs  database_monitor.rs  lib.rs  pagination.rs  sql_logger.rs  transaction.rs
crates/ryframe-db/tests/: data_scope_repo_test.rs  database_monitor_test.rs  dept_repo_test.rs  job_log_repo_test.rs  menu_repo_test.rs  named_datasource_mysql_test.rs  repository_test.rs  role_repo_test.rs  user_repo_test.rs  user_test.rs
crates/ryframe-generator/: Cargo.toml
crates/ryframe-generator/src/: engine.rs  lib.rs  naming.rs  schema.rs  type_mapping.rs
crates/ryframe-generator/tests/: naming_test.rs  template_contract_test.rs  type_mapping_test.rs
crates/ryframe-macro/: Cargo.toml
crates/ryframe-macro/src/: auto_fill.rs  datasource.rs  lib.rs  route.rs
crates/ryframe-middleware/: Cargo.toml
crates/ryframe-middleware/benches/: middleware_bench.rs
crates/ryframe-middleware/src/: body_limit.rs  cache_control.rs  client_ip.rs  cors.rs  idempotency.rs  lib.rs  metrics.rs  rate_limit.rs  replay_protection.rs  request_id.rs  request_log.rs  security_headers.rs  telemetry.rs  timeout.rs  websocket.rs  xss_filter.rs
crates/ryframe-middleware/tests/: body_limit_test.rs  compression_test.rs  idempotency_test.rs  metrics_test.rs  rate_limit_test.rs  replay_protection_test.rs  security_headers_test.rs  telemetry_test.rs  websocket_test.rs
crates/ryframe-monitor/: Cargo.toml
crates/ryframe-monitor/src/: cache_monitor.rs  lib.rs  server_info.rs
crates/ryframe-monitor/tests/: server_info_test.rs
crates/ryframe-service/: Cargo.toml
crates/ryframe-service/src/: auth_service.rs  lib.rs
crates/ryframe-service/tests/: file_service_test.rs  online_user_test.rs  password_reset_request_test.rs  permission_tree_test.rs  role_service_invariant_test.rs  service_tests.rs  tenant_service_test.rs  user_service_concurrency_test.rs
crates/ryframe-storage/: Cargo.toml
crates/ryframe-storage/src/: lib.rs  local.rs  s3.rs  signing.rs
crates/ryframe-storage/tests/: object_storage_test.rs
crates/ryframe-task/: Cargo.toml
crates/ryframe-task/src/: lib.rs  scheduler.rs  task_history.rs  task_manager.rs
crates/ryframe-task/tests/: task_test.rs
crates/ryframe/src/: app.rs  main.rs
examples/basic/: Cargo.toml
examples/basic/src/: dto.rs  handler.rs  main.rs  model.rs  repository.rs  service.rs
(+216 files in other folders)
