[package]
name = "ryframe-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-auth = { path = "../ryframe-auth" }
ryframe-service = { path = "../ryframe-service" }
ryframe-config = { path = "../ryframe-config" }
ryframe-db = { path = "../ryframe-db" }
ryframe-core = { path = "../ryframe-core" }
ryframe-monitor = { path = "../ryframe-monitor" }
ryframe-middleware = { path = "../ryframe-middleware" }
ryframe-task = { path = "../ryframe-task" }
ryframe-generator = { path = "../ryframe-generator" }
ryframe-macro = { path = "../ryframe-macro" }
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true, features = ["derive"] }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v7"] }
base64 = { workspace = true }
regex = { workspace = true }
utoipa = { workspace = true }
tracing = { workspace = true }
http-body-util = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
sea-orm-migration = { workspace = true }