[package]
name = "ryframe-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
argon2 = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
rand_core = { workspace = true}