[package]
name = "ryframe-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-core = { path = "../ryframe-core" }
ryframe-db = { path = "../ryframe-db" }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
argon2 = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
rand_core = { workspace = true}
sea-orm = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "auth_bench"
harness = false
