[package]
name = "ryframe-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = {workspace = true,features = ["derive"]}
serde_json = {workspace = true}
axum = {workspace = true}
thiserror = {workspace = true}
http = {workspace = true}
rand = {workspace = true}
md5 = {workspace = true}
base64 = {workspace = true}
uuid = {workspace = true,features = ["v4"]}
chrono = {workspace = true, features = ["serde"]}
image = {workspace = true}
calamine = {workspace = true}
rust_xlsxwriter = {workspace = true}
dashmap = {workspace = true}
tracing = {workspace = true}
toml = {workspace = true}
lettre = {workspace = true}
validator = {workspace = true}
utoipa = {workspace = true}

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
