[package]
name = "ryframe-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }