[package]
name = "ryframe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = {workspace = true}
sea-orm = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-build = { workspace = true }
http = { workspace = true }
tower-service = "0.3"
rand = { workspace = true }
thiserror = { workspace = true }
rdkafka = { workspace = true, optional = true }

[features]
kafka = ["dep:rdkafka"]

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[[bench]]
name = "core_bench"
harness = false
