[package]
name = "ryframe-db-migration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
ryframe-common = { path = "../ryframe-common" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
sea-orm = { workspace = true }
