[package]
name = "ryframe-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-core = { path = "../ryframe-core" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true ,features = ["derive"]}
chrono = {workspace = true,features = ["serde"]}