[package]
name = "ryframe-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-core = { path = "../ryframe-core" }
ryframe-macro = { path = "../ryframe-macro" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "std", "fmt"] }
serde = { workspace = true ,features = ["derive"]}
chrono = {workspace = true,features = ["serde"]}
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "db_bench"
harness = false