[package]
name = "ryframe-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-core = { path = "../ryframe-core" }
ryframe-macro = { path = "../ryframe-macro" }
sea-orm = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "std", "fmt"] }
serde = { workspace = true ,features = ["derive"]}
chrono = {workspace = true,features = ["serde"]}
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
sea-orm = { workspace = true }

[[bench]]
name = "db_bench"
harness = false
