[package]
name = "ryframe-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-db = { path = "../ryframe-db" }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
log = { workspace = true }
