[package]
name = "ryframe-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
utoipa = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
syn = { workspace = true }
sea-orm = { workspace = true }

[[bin]]
name = "ryframe-gen"
path = "src/bin/gen.rs"
