[package]
name = "ryframe-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ryframe 属性宏（AutoFill derive 等）"

[lib]
proc-macro = true

[dependencies]
ryframe-core = { path = "../ryframe-core" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
