[package]
name = "ryframe-middleware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-core = { path = "../ryframe-core" }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip", "compression-br"] }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
http = { workspace = true }
bytes = { workspace = true }
ammonia = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
