[package]
name = "ryframe-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-db = { path = "../ryframe-db" }
serde = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }