[package]
name = "ryframe-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-core = { path = "../ryframe-core" }
ryframe-db = { path = "../ryframe-db" }
ryframe-auth = { path = "../ryframe-auth" }
ryframe-config = { path = "../ryframe-config" }
ryframe-task = { path = "../ryframe-task" }
ryframe-generator = { path = "../ryframe-generator" }
zip = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
cron = { workspace = true }