[package]
name = "ryframe-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-core = { path = "../ryframe-core" }
ryframe-db = { path = "../ryframe-db" }
ryframe-auth = { path = "../ryframe-auth" }
ryframe-config = { path = "../ryframe-config" }
ryframe-generator = { path = "../ryframe-generator" }
ryframe-storage = { path = "../ryframe-storage" }
async-trait = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
utoipa = { workspace = true }
tracing = { workspace = true }
md5 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
tempfile = { workspace = true }
