[package]
name = "ryframe-task"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-core = { path = "../ryframe-core" }
ryframe-db = { path = "../ryframe-db" }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
async-trait = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
cron = { workspace = true }