[package]
name = "ryframe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
default-run = "ryframe"

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-db = { path = "../ryframe-db" }
ryframe-core = { path = "../ryframe-core" }
ryframe-service = { path = "../ryframe-service" }
ryframe-api = { path = "../ryframe-api" }
ryframe-auth = { path = "../ryframe-auth" }
ryframe-middleware = { path = "../ryframe-middleware" }
ryframe-task = { path = "../ryframe-task" }
ryframe-generator = { path = "../ryframe-generator" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"]}
tracing-appender = { workspace = true }
sea-orm = { workspace = true}
sea-orm-migration = { workspace = true }

[[bin]]
name = "ryframe"
path = "src/main.rs"

[[bin]]
name = "ryframe-migrate"
path = "src/bin/ryframe_migrate.rs"

[[bin]]
name = "ryframe-db-reset"
path = "src/bin/ryframe_db_reset.rs"