[package]
name = "ryframe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
default-run = "ryframe"

[dependencies]
ryframe-common = { path = "../ryframe-common" }
ryframe-config = { path = "../ryframe-config" }
ryframe-db = { path = "../ryframe-db" }
ryframe-db-migration = { path = "../ryframe-db-migration" }
ryframe-core = { path = "../ryframe-core" }
ryframe-service = { path = "../ryframe-service" }
ryframe-api = { path = "../ryframe-api" }
ryframe-auth = { path = "../ryframe-auth" }
ryframe-middleware = { path = "../ryframe-middleware" }
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"]}
tracing-appender = { workspace = true }
sea-orm = { workspace = true}

[[bin]]
name = "ryframe"
path = "src/main.rs"

[[bin]]
name = "ryframe-db-reset"
path = "src/bin/ryframe_db_reset.rs"
